# py-server

./: .gitignore  pyproject.toml
src/config/: asgi.py  gunicorn_config.py  middleware.py  settings.py  urls.py
src/my_app/: views.py
src/templates/: index.html
