[tool.poetry]
name = "py-server"
version = "0.1.0"
description = ""
authors = ["Grisha Litovchenko <glitovchenko@gpmdata.ru>"]
readme = "README.md"
packages = [{include = "py_server"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
